tests/error/extern_variable_was_never_filled_in.c
// fail "External declaration was declared and referenced but never defined."

extern int arst;

int main(){
    arst = 0;
}
